internal/worker/test_data/listeners.yaml
resources:
  - '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    name: monoceros_proxy
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 42
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: monoceros_proxy_http
              http_filters:
                - name: envoy.router
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      - '*'
                    routes:
                      - match:
                          prefix: '/'
                        route:
                          cluster: workers_cluster
                          retry_policy:
                            retry_on: connect-failure
